Remove the LikeBack system.

BUG: 312498
BUG: 252323
FIXED-IN: 2.8